# finance-pi

./: .env.example  .gitignore  README.md  finance-pi-admin.html  finance-pi-admin.url  finance-pi-architecture.md  pyproject.toml
.github/workflows/: ci.yml
docs/: kospi-data-backfill-plan.md  kospi-top-removal-impact-1996-2025.md  kospi-top-removal-impact-student-presentation.md  patch-notes.md  preferred-discount-mean-reversion-student-presentation.md  preferred-discount-surge-analysis.md  project-review-2026-07-02.html  raspberry-pi.md
ops/: backup.sh  deploy-from-windows.ps1  deploy.sh
ops/apache/: finance-pi-admin.conf
ops/systemd/: finance-pi-admin-watchdog.service  finance-pi-admin-watchdog.timer  finance-pi-admin.service  finance-pi-backup.service  finance-pi-backup.timer  finance-pi-daily.service  finance-pi-daily.timer
scripts/: audit_dart_backfill_universe.py  audit_price_adjustments.py  backfill.py  backfill_dart_web_financials.py  compact.py  kospi_top_contributor_sim.py  listed_investment_holdings_report.py  preferred_discount_surge_analysis.py  quarantine_suspicious_price_returns.py  rebuild_gold_for_repaired_prices.py  repair_naver_duplicate_prices.py  run_dq.py
src/finance_pi/: __init__.py  config.py  http.py  util.py
tests/unit/: test_admin.py  test_backtest.py  test_cli_daily.py  test_composite.py  test_config.py  test_cross_section.py  test_docs_site.py  test_events.py  test_factor_analysis.py  test_factors.py  test_http.py  test_identity.py  test_ingest.py  test_kis_adapter.py  test_kis_auth.py  test_kis_client.py  test_mcp_tools.py  (+9 more)
(+73 files in other folders)
