[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "finance-pi"
version = "0.1.0"
description = "Korean equity data pipeline and point-in-time factor backtesting platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "finance-pi maintainers" }
]
dependencies = [
  "aiolimiter>=1.1",
  "duckdb>=1.1",
  "httpx>=0.27",
  "polars>=1.0",
  "pydantic>=2.7",
  "tenacity>=8.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "vcrpy>=6.0",
]

[project.scripts]
finance-pi = "finance_pi.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_pi"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
